--- a/index.html
+++ b/index.html
@@ -8,23 +8,30 @@
     </head>
     <body>
         <header>
-            <a href="">WebStudio</a>
+            <a href="/">WebStudio</a>
             <nav>
                 <ul>
-                    <li><a href="#studio">Студия</a></li>
-                    <li><a href="#portfolio">Портфолио</a></li>
+                    <li><a href="#">Студия</a></li>
+                    <li><a href="#">Портфолио</a></li>
                     <li><a href="#contacts">Контакты</a></li>
                 </ul>
             </nav>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
         </header>
         <main>
             <section class="hero">
                 <h1>Эффективные решения для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
             </section>
-            <section id="studio">
+            <section>
+                <h2 hidden>Студия</h2>
                 <ul>
                     <li>
                         <h3>Внимание к деталям</h3>
@@ -85,7 +92,7 @@
                     </li>
                 </ul>
             </section>
-            <section id="portfolio">
+            <section>
                 <h2>Наша команда</h2>
                 <ul>
                     <li>
@@ -132,7 +139,7 @@
             </section>
         </main>
         <footer>
-            <a href="">WebStudio</a>
+            <a href="/">WebStudio</a>
             <address id="contacts">
                 <ul>
                     <li>
